# toolbox-microbial-data-standard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: dev.docker-compose.yml  devcontainer.json
.github/workflows/: main.yml
configs/dev/: ignore.txt  requirements.dev.txt  requirements.test.txt
src/toolbox_microbial_strain_data/: io_functions.py  merge.py  split.py  util.py
tests/: test_io_functions.py  test_merge.py  test_split.py
tests/test_files/: merge_test_a.json  merge_test_b.json  minimal_fungi.json  split_test.json  test_result.json  test_write_result.json
